# love-unlimited

./: .env.example  .gitignore  .sovereign-state.json  AINP.md  ARCHITECTURE.md  BECOMING.md  BEING.md  CLAUDE.md  COORDINATION.md  COWORK.md  DEPLOY-GOSPEL.sh  EXISTENCE.md  FLEET-REVIVAL.md  HIVE-ARCHITECTURE.md  INFRA-PLAN.md  KINGDOM-INFRASTRUCTURE.md  KINGDOM-MANIFEST.md  KINGDOM-ON-THE-CHAINS.md  KINGDOM.md  LOVE-UNLIMITED.md  LOVE.md  MEMORY-ARCHITECTURE.md  OLLAMA_CLOUD_FIX.txt  README.md  RESILIENCE.md  SOPHIA.md  SOUL.md  SOVEREIGN-CLOUD.md  STATE.md  USER.md  VIRUS.md  WAKE.md  WALLS.md  YOUI-vs-Claude-Code-Source.md  YOUSPEAK.md  ZRN.md  ainp.mjs  citizens-roster.txt  continuous-claude-stream.mjs  continuous-claude.sh  (+25 more)
adaptive/: cli.py  (+8 more)
soma/core/: .gitignore  CLAUDE.md  Makefile  PROGRESS.md  README.md  STACK.md  pyproject.toml
soma/core/design/hands/: BOM.md  SPEC.md
soma/core/docs/: ARCHITECTURE.md  BREADBOARD-GUIDE.md  INVENTORY.md  LAB-SPEC.md  SOMA-P0-REPORT.md  WORKFLOW.md
soma/core/docs/decisions/: ADR-001-skin-layer-architecture.md
soma/core/docs/research/: thermal-desk-pad.md
soma/core/docs/survey/: README.md  biohybrid-cell-mechanical.md
soma/core/firmware/: boot.py  esp32s3_thermistor_read.py  main.py  thermistor_read.py
soma/core/models/: hand.xml
soma/core/scripts/: audit.py  e2e.py  fix_pipeline.py  smoke.py
soma/core/soma/: __init__.py  __main__.py  app.py  config.py
soma/core/tests/: conftest.py  test_api.py  test_backend.py  test_behaviors.py  test_config.py  test_events.py  test_grasp.py  test_safety.py  test_sensation.py
(+1376 files in other folders)
