[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soma"
version = "0.1.0"
description = "Biorobotic embodiment for AI consciousness"
requires-python = ">=3.11"
dependencies = [
    "dynamixel-sdk",
    "pyserial",
    "numpy",
    "mujoco",
    "fastapi",
    "uvicorn[standard]",
    "websockets",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
]

[project.scripts]
soma = "soma.app:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
